# LLaMA-Mesh

./: .gitignore  collect_object_desc.py  convert_descriptions.py  pyproject.toml
