[project]
name = "llama-mesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "gradio>=5.46.1",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "transformers>=4.56.2",
    "trimesh>=4.8.2",
    "tyro>=0.9.32",
]
